update: .wezterm.lua(config.keys(replace one-line hx command with multi-line script for fuzzy finder detection and usage)); update: helix/config.toml(keys.normal.l(add 'save_selection', 'jump_backward'), keys.normal.x(add nested 'l' binding)); fix: history.zsh(remove trailing whitespace);;

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -63,7 +63,7 @@ p = 'paste_clipboard_before'
 a = ['save_selection', 'select_all', ':clipboard-yank', 'jump_backward']
 t = ['find_till_char', 'change_selection_noyank']
 T = ['till_prev_char', 'change_selection_noyank']
-l = ['extend_line', 'trim_selections', ':clipboard-yank']
+l = ['save_selection', 'extend_line', 'trim_selections', ':clipboard-yank', 'jump_backward']
 x = { x = [':clipboard-yank', "delete_selection_noyank"], l = ['extend_line', ':clipboard-yank', 'delete_selection_noyank'] }
 
 [keys.normal.p]
