describe the changes below, in a single line, using the following syntax 'add: blah; fix: blah, blah; rm: blah; impl: blah; update: blah, blah, blah; ...;' always end output with a semicolon. when there are multiple changes, of the same type (ie add|fix|etc), to a bloc|function|script|etc put those changes in parentheses and put that block/function/script/file name before those parentheses (ie: fix: funcX(blah, blah), fileX(blah, blah, blah); update: funcY blah, fileY(blah, blah blah); etc: ...;). when stating dependencies just say the name and developer - omit the repository host (ie github.com/kendfss/but -> kendfss/but; golang.org/x/net -> x/net). never include dependencies of dependencies unless they have been updated diff --git a/cheat/cheatsheets/personal/README.md b/.config/cheat/cheatsheets/personal/README.md similarity index 100% rename from cheat/cheatsheets/personal/README.md rename to .config/cheat/cheatsheets/personal/README.md diff --git a/cheat/cheatsheets/personal/acl b/.config/cheat/cheatsheets/personal/acl similarity index 100% rename from cheat/cheatsheets/personal/acl rename to .config/cheat/cheatsheets/personal/acl diff --git a/cheat/cheatsheets/personal/adb b/.config/cheat/cheatsheets/personal/adb similarity index 100% rename from cheat/cheatsheets/personal/adb rename to .config/cheat/cheatsheets/personal/adb diff --git a/cheat/cheatsheets/personal/ansi b/.config/cheat/cheatsheets/personal/ansi similarity index 100% rename from cheat/cheatsheets/personal/ansi rename to .config/cheat/cheatsheets/personal/ansi diff --git a/cheat/cheatsheets/personal/case b/.config/cheat/cheatsheets/personal/case similarity index 100% rename from cheat/cheatsheets/personal/case rename to .config/cheat/cheatsheets/personal/case diff --git a/cheat/cheatsheets/personal/cheat b/.config/cheat/cheatsheets/personal/cheat similarity index 100% rename from cheat/cheatsheets/personal/cheat rename to .config/cheat/cheatsheets/personal/cheat diff --git a/cheat/cheatsheets/per

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.log
 bug.md
 ble.sh/
-mpv/scripts/*.so
+**/mpv/scripts/*.so
 CRUSH.md
 .crush/
 tmp/
@@ -55,15 +55,15 @@ promo.md
 services/*/supervise
 .secrets
 dist/
-helix/runtime/
-!helix/runtime/queries/go/**
-!helix/runtime/queries/python/**
-!helix/runtime/queries/markdown/**
+**/helix/runtime/
+!**/helix/runtime/queries/go/**
+!**/helix/runtime/queries/python/**
+!**/helix/runtime/queries/markdown/**
 services/brightness/.brightness
-cheat/
-!cheat/cheatsheets/personal/**
-!cheat/conf.yml
-!cheat/README.md
+**/cheat/
+!**/cheat/cheatsheets/personal/**
+!**/cheat/conf.yml
+!**/cheat/README.md
 *.changes
 .zcompdump
 .zcompcache
