add: gallery-dl(space, exclamation), hx('A-;'), .gitignore(*.bak), tmux(h popup history), sig script, Parutix/json2go; fix: .wezterm.lua and .zshenv(replace -mt with -m --tiebreak), history.zsh(sk flags and index slicing), sha256 loop; impl: bckp --force flag; update: .gitignore(path prefixes), .tmux.conf(? source aliases), aliases.zsh(run-help, fuzzy shell integration), deploy-void.zsh(gallery-dl, lsof, ntfs-3g), take(looping, check mkdir), clone(existence check);

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -146,6 +146,7 @@ z         = ['delete_char_forward', 'move_next_word_end', 'move_prev_word_start'
 '|'       = { '|' = 'shell_pipe', '\' = 'shell_pipe_to', '$' = 'shell_keep_pipe', '!' = 'shell_insert_output', 1 = 'shell_append_output' }
 S-left    = 'goto_previous_buffer'
 S-right   = 'goto_next_buffer'
+'A-;'     = 'remove_primary_selection'
 A-w       = ':w!'
 A-S-w     = [':write-all!', ':write-all!', 'normal_mode']
 A-c       = ':clipboard-yank'
