--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.log
+*.bak
 bug.md
 ble.sh/
 **/mpv/scripts/*.so
@@ -55,15 +56,15 @@ promo.md
 services/*/supervise
 .secrets
 dist/
-**/helix/runtime/
-!**/helix/runtime/queries/go/**
-!**/helix/runtime/queries/python/**
-!**/helix/runtime/queries/markdown/**
 services/brightness/.brightness
-**/cheat/
-!**/cheat/cheatsheets/personal/**
-!**/cheat/conf.yml
-!**/cheat/README.md
+.config/helix/runtime/
+!.config/helix/runtime/queries/go/**
+!.config/helix/runtime/queries/python/**
+!.config/helix/runtime/queries/markdown/**
+.config/cheat/
+!.config/cheat/cheatsheets/personal/**
+!.config/cheat/conf.yml
+!.config/cheat/README.md
 *.changes
 .zcompdump
 .zcompcache
