add: fmtgo script, instagram config to gallery-dl, .go.md to gitignore, help/sed/. aliases, C language config, CACHEDIR export; fix: dict(empty def check ordering), thes(sort -u flag, empty def check ordering), helix(dl keybind adds move_line_up+goto_line_end, go formatter to fmtgo+rm lsp-ai from language-servers), tmux(h keybind history parsing), zshenv(VIRTUAL_ENV conditional quoting, PATH deduplication), history.zsh(function uses cat+sed instead of fc, tmux send-keys wrapper); rm: lsp-ai from go language-servers, conf language config from languages.toml; update: license filename to LICENSE;

--- a/.config/gallery-dl/config.json
+++ b/.config/gallery-dl/config.json
@@ -24,6 +24,9 @@
     "bluesky": {
       "filename": "{post_id}_{num}.{extension}"
     },
+    "instagram": {
+      "filename": "{post_id}_{num}.{extension}"
+    },
     "ytdl": {
       "enabled": true,
       "module": "yt-dlp"
