--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,7 +61,7 @@ bind . run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c 
 bind w run-shell 'test -d "$CLONES/tmux/tmux.wiki" && { unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$CLONES/tmux/tmux.wiki" \; set-option destroy-unattached \; display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id}"; } || tmux display "wiki not cloned"'
 bind ? display-popup -w 80% -h 80% -E 'source ~/.dotfiles/aliases.zsh; tmp="$(tmux list-keys; tmux list-keys -N)"; echo "$tmp" | sort | sk -e'
 
-bind h display-popup -w 80% -h 80% -E "source ~/.dotfiles/aliases.zsh; tmp=\$(cat ~/.dotfiles/cache/history | sk -e -m --tac | while IFS= read -r line; do echo \"\${line#*;}\"; done | perl -pe 's/\n/; /' | sed 's/; $//'); tmux send-keys -l -- \"\$tmp\""
+bind h display-popup -w 80% -h 80% -E "source ~/.dotfiles/aliases.zsh; tmp=\$(cat ~/.dotfiles/cache/history | sed 's/^$//g' | sed -E 's/^: [0-9]+:[0-9]+;//' | sk -e -m --tac | while IFS= read -r line; do echo \"\${line#*;}\"; done | perl -pe 's/\n/; /' | sed 's/; $//'); tmux send-keys -l -- \"\$tmp\""
 
 # bind -T prefix ? list-keys -N
 
