add: scripts/tmux-name-sessions.sh, helix keybinding 'd a' for select-all and delete, tmux bindings for session management and popups, shell aliases (upper, lower, words, freqs, ~), functions (save, dsu), wezterm URL regex pattern enhancement; fix: shell alias sk/fzf compatibility, function p newline handling, trans audio bitrate and scaling logic, changes command formatting, deploy script dependency installation and error handling, goc function formatting, PATH deduplication, reload function child process filtering, WORDCHARS character removal; update: kitty config (shell comment), tmux config (hooks, bindings, comments), zshenv (variable assignments, function rename, conditional improvements), zshrc (tmux execution guard), aliases (editor clarification, pt alias), functions (cfg file patterns, trans help text), keybindings (zsh guard), sig script type analysis logic; rm: tmux config deprecated hook attempts;

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -103,6 +103,7 @@ p     = ":buffer-previous"
 n     = ":buffer-next"
 
 [keys.normal.d]
+a   = ['select_all', "delete_selection"]
 e   = ['extend_next_word_end', 'delete_selection_noyank']
 l   = ['extend_line', 'delete_selection_noyank', 'move_line_up', 'goto_line_end']
 d   = 'delete_selection_noyank'
