--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,25 @@
 set -g default-terminal "xterm-256color"
 set -g terminal-overrides ',*:RGB'
+# set -g default-command 'cd ~ && exec ${SHELL} -l'
+# set -g default-working-directory ~
 
 set -g automatic-rename on # for windows
 set -g automatic-rename-format '#{b:pane_current_path}'
 set -g renumber-windows on # eliminate slack indices after deleting windows
 set -g base-index 1
 bind 0 select-window -t :10 # navigate to 10th window by pressing 0
+
+set-hook -g session-created "run-shell ~/.dotfiles/scripts/tmux-name-sessions.sh"
+set-hook -g session-closed  "run-shell ~/.dotfiles/scripts/tmux-name-sessions.sh"
+set-hook -g session-renamed "run-shell ~/.dotfiles/scripts/tmux-name-sessions.sh"
+# set-hook -g session-renamed "run-shell 'echo \"hook triggered at $(date)\" >> ~/tmux-hook-test.log'"
+
+# set-hook -g after-new-window 'if "[ #{window_panes} -eq 1 ]" "run-shell \"if [ ! -f /tmp/tmux_resurrect_restored ]; then tmux send-keys 'cd ~' Enter; fi\""'
+# set-hook -g after-new-window 'if "[ #{window_panes} -eq 1 ]" "run-shell \"if [ ! -f /tmp/tmux_resurrect_restored ]; then tmux send-keys \"cd ~\" Enter; fi\""'
+# set-hook -g after-new-window 'if "[ #{window_panes} -eq 1 ]" "send-keys \"cd ~\" \; send-keys Enter'
+# set-hook -ug after-new-window
+# bind c new-window -c ~
+
 
 # Status Bar
 # Update rate
@@ -46,32 +60,38 @@ tmux_commands_with_legacy_scroll="nano less more man git bat glow"
 
 
 #### key bindings ####
+bind c new-window -c ~
 unbind d
 unbind C-b
 unbind Escape
 set -g prefix Escape
-bind-key Escape send-prefix
+bind Escape send-prefix
 set -g prefix2 C-b
 bind C-b send-prefix
-bind-key n run-shell 'OLD=$(tmux display-message -p "#{window_id}") && tmux new-window -c "#{pane_current_path}" && tmux kill-window -t "$OLD"'
-
+bind n run-shell 'OLD=$(tmux display-message -p "#{window_id}") && tmux new-window -c "#{pane_current_path}" && tmux kill-window -t "$OLD"'
 bind Delete kill-session
-bind Enter run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "#{pane_current_path}" \; set-option destroy-unattached \; display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id}"'
-bind . run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$DOTFILES" \; set-option destroy-unattached \; display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id}"'
-bind w run-shell 'test -d "$CLONES/tmux/tmux.wiki" && { unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$CLONES/tmux/tmux.wiki" \; set-option destroy-unattached \; display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id}"; } || tmux display "wiki not cloned"'
-bind ? display-popup -w 80% -h 80% -E 'source ~/.dotfiles/aliases.zsh; tmp="$(tmux list-keys; tmux list-keys -N)"; echo "$tmp" | sort | sk -e'
+bind S run-shell 'OLD_SESSION=$(tmux display-message -p "#S"); tmux command-prompt -p "Switch to session (killing current):" "switch-client -t \"%%\" ; run-shell \"tmux kill-session -t $OLD_SESSION\""'
 
+bind . run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$DOTFILES" && tmux display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"'
+
+bind Enter run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "#{pane_current_path}" && tmux display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"'
+
+bind w run-shell 'test -d "$CLONES/tmux/tmux.wiki" && { unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$CLONES/tmux/tmux.wiki" && tmux display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"; } || tmux display "wiki not cloned"'
+
+bind ? display-popup -w 80% -h 80% -E 'source ~/.dotfiles/aliases.zsh; tmp="$(tmux list-keys; tmux list-keys -N)"; echo "$tmp" | sort | sk -e'
+bind ? display-popup -w 80% -h 80% -E "source ~/.dotfiles/aliases.zsh; tmp=\$(tmux list-keys; tmux list-keys -N); echo \"\$tmp\" | sort | sk -e"
+bind ? display-popup -w 80% -h 80% -E 'source ~/.dotfiles/aliases.zsh; tmp="$(tmux list-keys; tmux list-keys -N)"; echo "$tmp" | sort | sk -e'
 bind h display-popup -w 80% -h 80% -E "source ~/.dotfiles/aliases.zsh; tmp=\$(cat ~/.dotfiles/cache/history | sed 's/^$//g' | sed -E 's/^: [0-9]+:[0-9]+;//' | sk -e -m --tac | while IFS= read -r line; do echo \"\${line#*;}\"; done | perl -pe 's/\n/; /' | sed 's/; $//'); tmux send-keys -l -- \"\$tmp\""
 
 # bind -T prefix ? list-keys -N
 
-bind-key -T root WheelUpPane \
+bind -T root WheelUpPane \
 	if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
 		'send -Mt=' \
 		'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
 			"send -t= Up" "copy-mode -et="'
 
-bind-key -T root WheelDownPane \
+bind -T root WheelDownPane \
 	if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
 		'send -Mt=' \
 		'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
@@ -85,8 +105,8 @@ bind C switch-client -t '{marked}'
 
 # Window management
 
-bind-key -n C-Right next-window
-bind-key -n C-Left  select-window -t -1
+bind -n C-Right next-window
+bind -n C-Left  select-window -t -1
 
 bind k kill-window
 bind "\\" split-window -hc "#{pane_current_path}"
