--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@ tab_bar_edge            top
 remember_window_size    no
 tab_bar_style           separator
 background_image_layout scaled
-shell                   tmux
+# shell                   tmux
 notify_on_cmd_finish    unfocused 
 notify_on_cmd_finish    always 10.0 bell
 copy_on_select          no
