add: bat configuration, bash language support in helix, MANPAGER env, battery-info script, manpager script, clipboard scripts(c, p, tcb, tpb, tsb), changes script, goc script, induct script, transk script, xu script; fix: .tmux.conf(pane binding logic, status line), deploy scripts(package installation logic), functions.zsh(gg and goc function issues), zshrc(indentation), aliases.zsh(wording and ssh aliases), prompts.zsh(symbol), scripts(sshplay skip feature); rm: functions.zsh(obsolete clipboard functions, trans function); update: .gitignore, .tmux.conf(comments and keybindings), .zshenv, .zshrc(preexec hook), aliases.zsh(lsblk alias, add spaced/lined aliases), functions.zsh(symlinkDialogue, get, writeme, retract), deploy-termux.zsh(lines function), deploy-void.zsh(lines function, package installation logic, uv venv creation);

--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -169,3 +169,8 @@ auto-format = true
 [[language]]
 name        = "c"
 auto-format = true
+
+[[language]]
+name        = "bash"
+auto-format = true
+formatter   = { command = 'shfmt', args = ["-s", "-ci"] }
