--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,8 +25,9 @@ set-hook -g session-renamed "run-shell ~/.dotfiles/scripts/tmux-name-sessions.sh
 # Update rate
 set -g status-interval 1  
 set-option -g status-position top
-# Add battery to status bar
-set -g status-right " %H:%M %a(%d-%b-%y) #(~/.dotfiles/scripts/battery-status)#(~/.dotfiles/scripts/battery-percentage)"
+# Add battery info to status bar
+# set -g status-right " %H:%M %a(%d-%b-%y) #(~/.dotfiles/scripts/battery-status)#(~/.dotfiles/scripts/battery-percentage)"
+set -g status-right " %H:%M %a(%d-%b-%y) #(~/.dotfiles/scripts/battery-info)"
 set -g status-bg black
 set -g status-fg white
 
@@ -40,7 +41,6 @@ cyanSoft="#88c0d0"
 set -g window-status-format "#I:#W"
 set -g pane-border-style "fg=${greyDark}"
 set -g pane-active-border-style "fg=${greyMedium}"
-set -g window-status-current-format "#[fg=${cyanSoft},bold]#[underscore]#I:#W#{?window_zoomed_flag,(Z),}"
 set -g window-status-current-format "#{?window_zoomed_flag,#[fg=${greenSoft}]\[,}#[fg=${cyanSoft},bold]#[underscore]#I:#W#{?window_zoomed_flag,#[fg=${greenSoft}]\],}"
 set -g cursor-colour "${blueMuted}"
 
@@ -71,6 +71,15 @@ bind C-b send-prefix
 bind n run-shell 'OLD=$(tmux display-message -p "#{window_id}") && tmux new-window -c "#{pane_current_path}" && tmux kill-window -t "$OLD"'
 bind Delete kill-session
 bind S run-shell 'OLD_SESSION=$(tmux display-message -p "#S"); tmux command-prompt -p "Switch to session (killing current):" "switch-client -t \"%%\" ; run-shell \"tmux kill-session -t $OLD_SESSION\""'
+bind u unlink-window
+bind p last-window
+bind l command-prompt -p "(session_id:window_index):" "link-window -s '%%'"
+bind ! display-popup -w 80% -h 60% -d '#{pane_current_path}' -E "bash -c 'read -e -p \"! \" cmd; clear; echo \"➤ \$cmd\"; echo; eval \"\$cmd\"; echo; read -p \"\"'"
+bind '+' show-messages
+bind '~' run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "~" && tmux display-popup -w 80% -h 80% -d "~" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"'
+
+bind Tab switch-client -n
+bind BTab switch-client -p
 
 bind . run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$DOTFILES" && tmux display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"'
 
