--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -105,7 +105,7 @@ n     = ":buffer-next"
 [keys.normal.d]
 a   = ['select_all', "delete_selection"]
 e   = ['extend_next_word_end', 'delete_selection_noyank']
-l   = ['extend_line', 'delete_selection_noyank', 'move_line_up', 'goto_line_end']
+l   = ['extend_line', 'delete_selection_noyank', 'goto_line_end']
 d   = 'delete_selection_noyank'
 'c' = 'delete_char_forward'
 'D' = 'delete_char_backward'
