update: helix/config.toml(editor settings, keybindings), languages.toml(numbat grammar), tmux.conf(keybindings, hooks, settings, pane/window management, plugins), wezterm.lua(bell, keybindings), zshenv(environment variables), aliases.zsh(fzf/sk aliases), history.zsh(history function), keybindings.zsh(keybindings), scripts/(bckp, focus, reload, save, acp, add, clone, extract, fetch, ghs, goc, induct, offshore, open_command, play, review, sample, sums, tag, web_search, writeme), functions.zsh(bar, cnotes, cposts, fl, here, issues, name_all, peek, please, posts, quietly, tune); add: completions.zsh, scripts/(blank, beep, disks, perms, truants, sums, sample, tag, review, writeme, web_search, offshore, fetch, ghs, clone, add, acp, save, focus, bckp), tmux.conf(popup keybindings, kill modes, pane navigation), helix/languages.toml(numbat grammar), wezterm.lua(bell config), .gitignore(patterns); rm: functions.zsh(redundant functions), tmux.conf(commented hooks), aliases.zsh(lsblk alias); fix: scripts/(c, p, tcb, tpb, tsb), zprofile(indentation), keybindings.zsh(keybindings), aliases.zsh(fzf/sk detection), tmux.conf(prefix2 binding), .zshenv(WORDCHARS), scripts/induct(variable handling);

--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -174,3 +174,17 @@ auto-format = true
 name        = "bash"
 auto-format = true
 formatter   = { command = 'shfmt', args = ["-s", "-ci"] }
+
+
+[[language]]
+name          = "numbat"
+scope         = "source.numbat"
+file-types    = ["nbt"]
+roots         = []
+comment-token = "#"
+grammar       = "numbat"
+# indent        = { tab-width = 2, unit = "  " }
+
+[[grammar]]
+name   = "numbat"
+source = { path = "/home/kendfss/.config/helix/grammars/sources/tree-sitter-numbat" }
