--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,27 +7,31 @@ set -g automatic-rename on # for windows
 set -g automatic-rename-format '#{b:pane_current_path}'
 set -g renumber-windows on # eliminate slack indices after deleting windows
 set -g base-index 1
-bind 0 select-window -t :10 # navigate to 10th window by pressing 0
+bind -N "jump to left-most window" 0 select-window -t :10 # navigate to 10th window by pressing 0
+# Reload config file
+bind -N "reload config" r run-shell 'tmux source-file ~/.tmux.conf && tmux display "tmux conf reloaded!"'
+setw -g mode-keys vi # copy mode : vim
 
-set-hook -g session-created "run-shell ~/.dotfiles/scripts/tmux-name-sessions.sh"
-set-hook -g session-closed  "run-shell ~/.dotfiles/scripts/tmux-name-sessions.sh"
-set-hook -g session-renamed "run-shell ~/.dotfiles/scripts/tmux-name-sessions.sh"
-# set-hook -g session-renamed "run-shell 'echo \"hook triggered at $(date)\" >> ~/tmux-hook-test.log'"
 
-# set-hook -g after-new-window 'if "[ #{window_panes} -eq 1 ]" "run-shell \"if [ ! -f /tmp/tmux_resurrect_restored ]; then tmux send-keys 'cd ~' Enter; fi\""'
-# set-hook -g after-new-window 'if "[ #{window_panes} -eq 1 ]" "run-shell \"if [ ! -f /tmp/tmux_resurrect_restored ]; then tmux send-keys \"cd ~\" Enter; fi\""'
-# set-hook -g after-new-window 'if "[ #{window_panes} -eq 1 ]" "send-keys \"cd ~\" \; send-keys Enter'
-# set-hook -ug after-new-window
-# bind c new-window -c ~
+
+
+# set-hook -g session-created "run-shell ~/.dotfiles/scripts/tmux-name-sessions.sh"
+# set-hook -g session-closed  "run-shell ~/.dotfiles/scripts/tmux-name-sessions.sh"
+# set-hook -g session-renamed "run-shell ~/.dotfiles/scripts/tmux-name-sessions.sh"
+
+set-hook -g session-created "run-shell 'bash ~/.dotfiles/scripts/tmux-name-sessions.sh && bash ~/.tmux/plugins/tmux-resurrect/scripts/save.sh'"
+set-hook -g session-closed  "run-shell 'bash ~/.dotfiles/scripts/tmux-name-sessions.sh && bash ~/.tmux/plugins/tmux-resurrect/scripts/save.sh'"
+set-hook -g session-renamed "run-shell 'bash ~/.dotfiles/scripts/tmux-name-sessions.sh && bash ~/.tmux/plugins/tmux-resurrect/scripts/save.sh'"
+set-hook -g window-linked "run-shell ~/.tmux/plugins/tmux-resurrect/scripts/save.sh"
+set-hook -g window-unlinked "run-shell ~/.tmux/plugins/tmux-resurrect/scripts/save.sh"
+set-hook -g window-renamed "run-shell ~/.tmux/plugins/tmux-resurrect/scripts/save.sh"
 
 
 # Status Bar
-# Update rate
-set -g status-interval 1  
+
+set -g status-interval 1                                                      # set update rate
 set-option -g status-position top
-# Add battery info to status bar
-# set -g status-right " %H:%M %a(%d-%b-%y) #(~/.dotfiles/scripts/battery-status)#(~/.dotfiles/scripts/battery-percentage)"
-set -g status-right " %H:%M %a(%d-%b-%y) #(~/.dotfiles/scripts/battery-info)"
+set -g status-right " %H:%M %a(%d-%b-%y) #(~/.dotfiles/scripts/battery-info)" # add time and battery info
 set -g status-bg black
 set -g status-fg white
 
@@ -44,12 +48,11 @@ set -g pane-active-border-style "fg=${greyMedium}"
 set -g window-status-current-format "#{?window_zoomed_flag,#[fg=${greenSoft}]\[,}#[fg=${cyanSoft},bold]#[underscore]#I:#W#{?window_zoomed_flag,#[fg=${greenSoft}]\],}"
 set -g cursor-colour "${blueMuted}"
 
-# Make input delay shorter
-set -sg escape-time 0
 
 
-set -g history-limit 3000
-set -g prompt-history-limit 3
+
+set -g history-limit 10000
+set -g prompt-history-limit 10
 set -g display-time 0
 set -g mouse on
 set -g set-clipboard off
@@ -60,47 +63,98 @@ tmux_commands_with_legacy_scroll="nano less more man git bat glow"
 
 
 #### key bindings ####
-bind c new-window -c ~
+set -sg escape-time 0 # Make input delay shorter
+bind -N "new window in $HOME" c new-window -c ~
+bind -N "new window in $PWD" o new-window
 unbind d
 unbind C-b
 unbind Escape
 set -g prefix Escape
-bind Escape send-prefix
+bind -N "prefix" Escape send-prefix
 set -g prefix2 C-b
-bind C-b send-prefix
-bind n run-shell 'OLD=$(tmux display-message -p "#{window_id}") && tmux new-window -c "#{pane_current_path}" && tmux kill-window -t "$OLD"'
-bind Delete kill-session
-bind S run-shell 'OLD_SESSION=$(tmux display-message -p "#S"); tmux command-prompt -p "Switch to session (killing current):" "switch-client -t \"%%\" ; run-shell \"tmux kill-session -t $OLD_SESSION\""'
-bind u unlink-window
-bind p last-window
-bind l command-prompt -p "(session_id:window_index):" "link-window -s '%%'"
-bind ! display-popup -w 80% -h 60% -d '#{pane_current_path}' -E "bash -c 'read -e -p \"! \" cmd; clear; echo \"➤ \$cmd\"; echo; eval \"\$cmd\"; echo; read -p \"\"'"
-bind '+' show-messages
-bind '~' run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "~" && tmux display-popup -w 80% -h 80% -d "~" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"'
+bind -N "prefix2" C-b send-prefix2
 
-bind Tab switch-client -n
-bind BTab switch-client -p
+bind -N "new window" n run-shell 'OLD=$(tmux display-message -p "#{window_id}") && tmux new-window -c "#{pane_current_path}" && tmux kill-window -t "$OLD"'
+bind -N "kill current window" Delete kill-window
+bind -N "kill current session for another" S run-shell 'OLD_SESSION=$(tmux display-message -p "#S"); tmux command-prompt -p "Switch to session (killing current):" "switch-client -t \"%%\" ; run-shell \"tmux kill-session -t $OLD_SESSION\""'
+bind -N "unlink window from session" u unlink-window
+bind -N "goto previous window" p last-window
+bind -N "open a window from another session in current" l command-prompt -p "(session_id:window_index):" "link-window -s '%%'"
+bind -N "popup shell command" ! display-popup -w 90% -h 60% -d '#{pane_current_path}' -E "bash -c 'read -e -p \"! \" cmd; clear; echo \"➤ \$cmd\"; echo; eval \"\$cmd\"; echo; read -p \"\"'"
+bind -N "display log messages" '+' show-messages
+bind -N "popup in $HOME" '~' run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "~" && tmux display-popup -w 90% -h 90% -d "~" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"'
 
-bind . run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$DOTFILES" && tmux display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"'
+bind -N "switch to next session" Tab switch-client -n
+bind -N "switch to prev session" BTab switch-client -p
 
-bind Enter run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "#{pane_current_path}" && tmux display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"'
+bind -N "popup in $DOTFILES" . run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$DOTFILES" && tmux display-popup -w 90% -h 90% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"'
 
-bind w run-shell 'test -d "$CLONES/tmux/tmux.wiki" && { unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$CLONES/tmux/tmux.wiki" && tmux display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"; } || tmux display "wiki not cloned"'
+bind -N "popup in $PWD" Enter run-shell 'unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "#{pane_current_path}" && tmux display-popup -w 90% -h 90% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"'
 
-bind ? display-popup -w 80% -h 80% -E 'source ~/.dotfiles/aliases.zsh; tmp="$(tmux list-keys; tmux list-keys -N)"; echo "$tmp" | sort | sk -e'
-bind ? display-popup -w 80% -h 80% -E "source ~/.dotfiles/aliases.zsh; tmp=\$(tmux list-keys; tmux list-keys -N); echo \"\$tmp\" | sort | sk -e"
-bind ? display-popup -w 80% -h 80% -E 'source ~/.dotfiles/aliases.zsh; tmp="$(tmux list-keys; tmux list-keys -N)"; echo "$tmp" | sort | sk -e'
-bind h display-popup -w 80% -h 80% -E "source ~/.dotfiles/aliases.zsh; tmp=\$(cat ~/.dotfiles/cache/history | sed 's/^$//g' | sed -E 's/^: [0-9]+:[0-9]+;//' | sk -e -m --tac | while IFS= read -r line; do echo \"\${line#*;}\"; done | perl -pe 's/\n/; /' | sed 's/; $//'); tmux send-keys -l -- \"\$tmp\""
+bind -N "go to tmux.wiki" w run-shell 'dir="$CLONES/tmux/tmux.wiki"; if [ -d "$dir" ]; then test -d "$dir" && { unset TMUX && tmux new-session -d -s "popup-#{session_id}" -c "$CLONES/tmux/tmux.wiki" && tmux display-popup -w 90% -h 90% -d "#{pane_current_path}" -E "tmux attach-session -t popup-#{session_id} \; set-option -t popup-#{session_id} destroy-unattached on"; } || tmux display "wiki not cloned"; else xdg-open https://github.com/tmux/tmux/wiki; fi'
 
-# bind -T prefix ? list-keys -N
 
-bind -T root WheelUpPane \
+# bind ? display-popup -w 90% -h 90% -E 'source ~/.dotfiles/aliases.zsh; tmp="$(tmux list-keys; tmux list-keys -N)"; echo "$tmp" | sort | sk -e'
+
+bind -N "show keybindings" ? display-popup -w 90% -h 90% -E 'source ~/.dotfiles/aliases.zsh; {tmux list-keys; tmux list-keys -N} | sort | sk | sed "s/^bind-key\s+//;s/^-r\s+//;s/^-T\s+\w+(-\w+)*\s+//" | column -tH1 | sed "s/\s+/ /g" | tsb'
+
+
+
+
+
+
+# Window/pane management
+bind -N "write to all panes at once" y setw synchronize-panes
+bind -N "shift window to left" -n C-S-Left swap-window -d -t -1
+bind -N "shift window to right" -n C-S-Right swap-window -d -t +1
+bind -N "vertical split pane in $PWD" "\\" split-window -hc "#{pane_current_path}"
+bind -N "horizontal split pane in $PWD" - split-window -vc "#{pane_current_path}"
+unbind x
+unbind t
+bind -N "close current pane" x kill-pane
+bind -N "vertically split to inject pane into current window" j choose-window 'join-pane -h -s "%%"'
+bind -N "horizontally split inject pane into current window" J choose-window 'join-pane -s "%%"'
+## kill modes
+bind -N "enter kill mode" k switch-client -T kill ; \
+	display-message "in kill mode"
+bind -N "kill current window" -T kill w kill-window
+bind -N "kill window(s) from fzf-popup" -T kill W display-popup -w 90% -h 90% -E "source ~/.dotfiles/aliases.zsh; tmux list-windows -a | sk -e --tac | awk '{print $1}' | sed 's/:$//g' | xargs -n1 tmux kill-window -t"
+bind -N "kill current pane" -T kill p kill-pane
+bind -N "kill panes(s) from popup" -T kill P choose-window 'kill-pane -t "%%"'
+# bind -N "kill panes(s) from popup" -T kill P display-popup -w 90% -h 90% -E "source ~/.dotfiles/aliases.zsh; tmux list-panes -a | sk -e --tac --preview 'echo {} | tr \"[:space:]\" \"\t\" | cut -f1 | sed \"s/:$//g\" | xargs -n1 tmux join-pane -s' | awk '{print $1}' | sed 's/:$//g' | xargs -n1 tmux kill-window -t"
+## kill-all mode
+bind -N "enter kill-all mode" -T kill a switch-client -T kill-all
+
+
+
+# window/pane navigation
+bind -N "go to window on right" -n C-Right next-window
+bind -N "go to window on left" -n C-Left  select-window -t -1
+bind -N "switch to marked pane" \` switch-client -t '{marked}'
+bind -N "switch to marked pane" C switch-client -t '{marked}'
+bind -N "step 1 pane up" Up select-pane -U
+bind -N "step 1 pane down" Down select-pane -D
+bind -N "step 1 pane left" Left select-pane -L
+bind -N "step 1 pane right" Right select-pane -R
+# Save the current zoom state and zoom after switching panes
+bind -N "smooth zoom on move left" -r Left if-shell -F '#{window_zoomed_flag}' \
+    'select-pane -L; resize-pane -Z' \
+    'select-pane -L'
+bind -N "smooth zoom on move down" -r Down if-shell -F '#{window_zoomed_flag}' \
+    'select-pane -D; resize-pane -Z' \
+    'select-pane -D'
+bind -N "smooth zoom on move up" -r Up if-shell -F '#{window_zoomed_flag}' \
+    'select-pane -U; resize-pane -Z' \
+    'select-pane -U'
+bind -N "smooth zoom on move right" -r Right if-shell -F '#{window_zoomed_flag}' \
+    'select-pane -R; resize-pane -Z' \
+    'select-pane -R'
+bind -N "mouse-wheel scroll up" -T root WheelUpPane \
 	if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
 		'send -Mt=' \
 		'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
 			"send -t= Up" "copy-mode -et="'
-
-bind -T root WheelDownPane \
+bind -N "mouse-wheel scroll down" -T root WheelDownPane \
 	if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
 		'send -Mt=' \
 		'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
@@ -108,62 +162,12 @@ bind -T root WheelDownPane \
 
 
 
-bind \` switch-client -t '{marked}'
-bind C switch-client -t '{marked}'
-
-
-# Window management
-
-bind -n C-Right next-window
-bind -n C-Left  select-window -t -1
-
-bind k kill-window
-bind "\\" split-window -hc "#{pane_current_path}"
-bind - split-window -vc "#{pane_current_path}"
-# bind Space last-window # toggle to previous window
-bind o new-window
-
-# Pane management
-unbind x
-unbind t
-bind t new-window -c "#{pane_current_path}"
-bind x kill-pane
-bind j choose-window 'join-pane -h -s "%%"'
-bind J choose-window 'join-pane -s "%%"'
-
-# Save the current zoom state and zoom after switching panes
-bind -r Left if-shell -F '#{window_zoomed_flag}' \
-    'select-pane -L; resize-pane -Z' \
-    'select-pane -L'
-bind -r Down if-shell -F '#{window_zoomed_flag}' \
-    'select-pane -D; resize-pane -Z' \
-    'select-pane -D'
-bind -r Up if-shell -F '#{window_zoomed_flag}' \
-    'select-pane -U; resize-pane -Z' \
-    'select-pane -U'
-bind -r Right if-shell -F '#{window_zoomed_flag}' \
-    'select-pane -R; resize-pane -Z' \
-    'select-pane -R'
-
-# Reload config file
-bind r run-shell 'tmux source-file ~/.tmux.conf && tmux display "tmux conf reloaded!"'
-# bind S-r send-keys -t '$'
-
-# Quickly open a new window
-bind N new-window
-
-# Synchronize all panes in a window
-bind y setw synchronize-panes
-
-#### copy mode : vim ####
-setw -g mode-keys vi
-
-bind -n C-S-Left swap-window -d -t -1
-bind -n C-S-Right swap-window -d -t +1
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @continuum-restore 'on'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-processes 'hx'
 
