--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -6,16 +6,19 @@
 theme = 'transparent'
 
 [editor]
-shell           = ["zsh", "-c"]
-line-number     = 'relative'
-idle-timeout    = 3000
-auto-completion = true
-auto-info       = true
-scroll-lines    = 1
-gutters         = ["diff", "diagnostics", "spacer", "line-numbers", "spacer"]
-color-modes     = true
-bufferline      = 'multiple'
-true-color      = true
+shell                  = ["zsh", "-c"]
+line-number            = 'relative'
+idle-timeout           = 3000
+auto-completion        = true
+auto-info              = true
+scroll-lines           = 1
+scrolloff              = 0
+completion-trigger-len = 0
+completion-replace     = true
+gutters                = ["diff", "diagnostics", "spacer", "line-numbers", "spacer"]
+color-modes            = true
+bufferline             = 'multiple'
+true-color             = false
 
 [editor.auto-save]
 focus-lost          = true
@@ -101,6 +104,7 @@ h     = ":hsplit"
 v     = ":vsplit"
 p     = ":buffer-previous"
 n     = ":buffer-next"
+q     = ':quit'
 
 [keys.normal.d]
 a   = ['select_all', "delete_selection"]
@@ -137,6 +141,9 @@ q     = ['collapse_selection', 'keep_primary_selection']
 j = 'jumplist_picker'
 f = 'jump_forward'
 b = 'jump_backward'
+
+[keys.normal.g]
+f = { 'f' = 'goto_file', '-' = 'goto_file_hsplit', '\' = 'goto_file_vsplit', 'h' = 'goto_file_hsplit', 'v' = 'goto_file_vsplit' }
 
 [keys.normal]
 tab       = 'no_op'
